@@ -16,6 +16,7 @@
     toupper
   - add SPVM::CORE random method
   - move strerror to SPVM::Errno
+  - strerror become thread safe
   
 0.0441 2019-10-11
   - add pi method to SPVM::Math
